--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </script>
   </head>
   <body>
+    <span><input type='file' id='camera' accept="image/*;capture=camera"/>HTML5 Camera</span>
     <button onclick="capturePhoto();">Capture Photo</button> <br>
     <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
     <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
