--- a/index.html
+++ b/index.html
@@ -1,111 +1,82 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Capture Photo</title>
+    <script src='cordova.js'></script>
+    <meta name="viewport" content="width=320; user-scalable=no"/>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>ColorThief Demo</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" src='color-thief.js'></script>
-    <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" charset="utf-8" src="http://code.jquery.com/jquery-2.0.0.js"></script>
+    <script type="text/javascript" charset="utf-8" src="color-thief.js"></script>
 
-
-        var pictureSource;   // picture source
-        var destinationType; // sets the format of returned value
-
-        // Wait for device API libraries to load
-        //
-        document.addEventListener("deviceready", onDeviceReady, false);
-
-        // device APIs are available
-        //
-        function onDeviceReady() {
-            pictureSource = navigator.camera.PictureSourceType;
-            destinationType = navigator.camera.DestinationType;
+    <style>
+        #yourimage {
+            width: 100%;
         }
 
-        // Called when a photo is successfully retrieved
-        //
-        function onPhotoDataSuccess(imageData) {
-            // Uncomment to view the base64-encoded image data
-            // console.log(imageData);
-
-            // Get image handle
-            //
-            var smallImage = document.getElementById('smallImage');
-
-            // Unhide image elements
-            //
-            smallImage.style.display = 'block';
-
-            // Show the captured photo
-            // The inline CSS rules are used to resize the image
-            //
-            smallImage.src = "data:image/jpeg;base64," + imageData;
+        #swatches {
+            width: 100%;
+            height: 50px;
         }
 
-        // Called when a photo is successfully retrieved
-        //
-        function onPhotoURISuccess(imageURI) {
-            // Uncomment to view the image file URI
-            // console.log(imageURI);
-
-            // Get image handle
-            //
-            var largeImage = document.getElementById('largeImage');
-
-            // Unhide image elements
-            //
-            largeImage.style.display = 'block';
-
-            // Show the captured photo
-            // The inline CSS rules are used to resize the image
-            //
-            largeImage.src = imageURI;
+        .swatch {
+            width: 18%;
+            height: 50px;
+            border-style: solid;
+            border-width: thin;
+            float: left;
+            margin-right: 3px;
         }
-
-        // A button will call this function
-        //
-        function capturePhoto() {
-            // Take picture using device camera and retrieve image as base64-encoded string
-            navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50,
-                destinationType: destinationType.DATA_URL });
-        }
-
-        // A button will call this function
-        //
-        function capturePhotoEdit() {
-            // Take picture using device camera, allow edit, and retrieve image as base64-encoded string
-            navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 20, allowEdit: true,
-                destinationType: destinationType.DATA_URL });
-        }
-
-        // A button will call this function
-        //
-        function getPhoto(source) {
-            // Retrieve image file location from specified source
-            navigator.camera.getPicture(onPhotoURISuccess, onFail, { quality: 50,
-                destinationType: destinationType.FILE_URI,
-                sourceType: source });
-        }
-
-        // Called if something bad happens.
-        //
-        function onFail(message) {
-            alert('Failed because: ' + message);
-        }
-
-    </script>
+    </style>
 </head>
+
 <body>
-<input type='file' id='takePictureField' accept="image/*" capture="camera"/>
-<button onclick="capturePhoto();">Capture Photo</button>
-<br>
-<button onclick="capturePhotoEdit();">Capture Editable Photo</button>
-<br>
-<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button>
-<br>
-<button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">From Photo Album</button>
-<br>
-<img style="display:none;width:60px;height:60px;" id="smallImage" src=""/>
-<img style="display:none;" id="largeImage" src=""/>
+
+<input type="file" capture="camera" accept="image/*" id="takePictureField">
+
+<img id="yourimage">
+
+<div id="swatches">
+    <div id="swatch0" class="swatch"></div>
+    <div id="swatch1" class="swatch"></div>
+    <div id="swatch2" class="swatch"></div>
+    <div id="swatch3" class="swatch"></div>
+    <div id="swatch4" class="swatch"></div>
+</div>
+
+<script>
+    var desiredWidth;
+
+    $(document).ready(function () {
+        console.log('onReady');
+        $("#takePictureField").on("change", gotPic);
+        $("#yourimage").load(getSwatches);
+        desiredWidth = window.innerWidth;
+
+        if (!("url" in window) && ("webkitURL" in window)) {
+            window.URL = window.webkitURL;
+        }
+
+    });
+
+    function getSwatches() {
+        var colorArr = createPalette($("#yourimage"), 5);
+        for (var i = 0; i < Math.min(5, colorArr.length); i++) {
+            $("#swatch" + i).css("background-color", "rgb(" + colorArr[i][0] + "," + colorArr[i][1] + "," + colorArr[i][2] + ")");
+            console.log($("#swatch" + i).css("background-color"));
+        }
+    }
+
+    //Credit: https://www.youtube.com/watch?v=EPYnGFEcis4&feature=youtube_gdata_player
+    function gotPic(event) {
+        if (event.target.files.length == 1 &&
+                event.target.files[0].type.indexOf("image/") == 0) {
+            $("#yourimage").attr("src", URL.createObjectURL(event.target.files[0]));
+        }
+    }
+
+
+</script>
 </body>
+
 </html>
