--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         // Cordova is ready
         //
         function onDeviceReady() {
-
+            alert('I am on device ready');
             // Retrieve image file location from specified source
             navigator.camera.getPicture(uploadPhoto,
-                    function(message) { alert('get picture failed'); },
+                    function (message) {
+                        alert('get picture failed');
+                    },
                     { quality: 50,
                         destinationType: navigator.camera.DestinationType.FILE_URI,
                         sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY }
@@ -26,9 +28,9 @@
 
         function uploadPhoto(imageURI) {
             var options = new FileUploadOptions();
-            options.fileKey="file";
-            options.fileName=imageURI.substr(imageURI.lastIndexOf('/')+1);
-            options.mimeType="image/jpeg";
+            options.fileKey = "file";
+            options.fileName = imageURI.substr(imageURI.lastIndexOf('/') + 1);
+            options.mimeType = "image/jpeg";
 
             var params = new Object();
             params.value1 = "test";
@@ -37,25 +39,26 @@
             options.params = params;
 
             var ft = new FileTransfer();
-            ft.upload(imageURI, encodeURI("http://some.server.com/upload.php"), win, fail, options);
+            ft.upload(imageURI, encodeURI("http://s1.storehippo.com:5010/ms/upload"), win, fail, options);
         }
 
         function win(r) {
-            console.log("Code = " + r.responseCode);
-            console.log("Response = " + r.response);
-            console.log("Sent = " + r.bytesSent);
+            aler("Code = " + r.responseCode);
+            alert("Response = " + r.response);
+            alert("Sent = " + r.bytesSent);
         }
 
         function fail(error) {
             alert("An error has occurred: Code = " + error.code);
-            console.log("upload error source " + error.source);
-            console.log("upload error target " + error.target);
+            alert("upload error source " + error.source);
+            alert("upload error target " + error.target);
         }
 
     </script>
 </head>
 <body>
 <h1>Example</h1>
+
 <p>Upload File</p>
 </body>
 </html>
