--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         function onPhotoURISuccess(imageURI) {
             alert(imageURI);
             //
-            var largeImage = document.getElementById('largeImage');
+            var largeImage = document.getElementById('smallImage');
 
             // Unhide image elements
             //
