--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
 <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
-<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
+<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library1</button><br>
 <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
 </body>
 </html>
