--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         // Called when a photo is successfully retrieved
         //
         function onPhotoDataSuccess(imageData) {
+            alert(imageData);
             var smallImage = document.getElementById('smallImage');
             smallImage.style.display = 'block';
             smallImage.src = "data:image/jpeg;base64," + imageData;
